solved bug causing horizontal scroll

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -20,8 +20,12 @@
     width: 100%;
     height: 100px;
     justify-content: space-between;
-    padding: 50px;
+    padding: 0 50px;
     align-items: center;
+}
+.navbarMobile,
+.navbarDesktop {
+    box-sizing: border-box;
 }
 .navLinks {
     display: flex;
